resolve cosmetic issue on logout button overlapping datepicker calendar

--- a/oasisbet-react/src/component/MainMenu.css
+++ b/oasisbet-react/src/component/MainMenu.css
@@ -40,6 +40,7 @@
   font-size: 12px;
   margin-right: 12px;
   width: 100px;
+  z-index: 0;
 }
 
 .btn-logout:hover {
